# Lexie

./: .gitignore  .pylintrc  CODEOWNERS  INSTALL.md  README.md  check_coverage.py  docker-compose.yml  gunicorn.service  lexie-gunicorn.service  pyproject.toml  requirements.txt  setup.sh  tox.ini  wsgi.py
.github/workflows/: codeql-analysis.yml  test_develop.yml  test_staging.yml
install/: gunicorn.service  lexie.nginx
lexie/: Dockerfile  __init__.py  api.py  apikey.py  app.ini  app.py  authentication.py  cache.py  caching.py  config.json  config_docker.json  db.py  device_api.py  events.py  extensions.py  lexie_app.py  requirements.txt  room_api.py  run.py  schema.sql  step_api.py  trigger_api.py  views.py
lexie/devices/: ILexieDevice.py  LexieDevice.py  device.py
lexie/drivers/shelly/: __init__.py  shelly1.py  shelly_bulb_rgbw.py
lexie/drivers/virtual/: switch.py
lexie/smarthome/: LexieDevice.py  Room.py  Routine.py  caching.py  eventlog.py  events.py  exceptions.py  lexiedevice.py  models.py  room.py  routine.py
lexie/templates/: add-device.html  add-routine.html  apikey.html  apikey_generate.html  change-password.html  dashboard.html  device-list.html  edit-routine.html  eventlog.html  login.html  routines.html  setup.html
lexie/templates/includes/: footer.html  (+2 more)
nginx/: nginx.conf
tests/: conftest.py  test_apikey.py  test_authentication.py  test_device.py  test_lexie.py  test_lexie_api.py  test_lexie_device_api.py  test_lexie_events.py  test_lexie_room_api.py  test_lexie_ui.py  test_lexiedevice.py  test_rooms.py  test_routine.py  test_routine_api.py  test_shelly.py  test_shelly1.py  test_shelly_bulb_rgbw.py
tests/drivers/: test_shelly_bulb_rgbw.py  test_virtual_devices.py
tests/fixtures/: mock_lexieclasses.py  test_flask_app.py
(+4 files in other folders)
