[tool.poetry]
name = "Lexie"
version = "0.1.0"
description = ""
authors = ["Bear <csaba.ferenclaszlo@zapier.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
shortuuid = "^1.0.1"
requests = "^2.26.0"
pymemcache = "^3.5.0"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-SocketIO = "^5.1.1"
eventlet = "0.30.2"
tinydb = "^4.5.2"
Flask-Threads = "^0.1.0"
Flask-APScheduler = "^1.12.2"
Flask-Login = "^0.5.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-html = "^3.1.1"
pylint = "^2.10.2"
tox = "^3.24.3"
bandit = "^1.7.0"
mypy = "^0.910"
tox-poetry = "^0.4.1"
coverage = "^5.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
safety = "^1.10.3"
pylint-flask-sqlalchemy = "^0.2.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
